# climate-rl-fedrain-api

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment-cpu.yml  environment.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
examples/: README.md  climate_model_ebm.py  climate_model_scbc.py
examples/climate_models/: ebm.py  ebm_v1.py  ebm_v2.py  ebm_v3.py  rce.py  rce17_v0.py  rce_v0.py  scbc_v0.py  scbc_v1.py
examples/climate_models/f90/: scbc  scbc.f90  scbc_v1.py
fedrain/: __init__.py  api.py  config.py  utils.py
fedrain/algorithms/: __init__.py  base.py  ddpg.py
fedrain/analysis/: recorder.py
fedrain/fedrl/: __init__.py  client.py  fedrl.py  server.py
tests/: conftest.py  test_climate_model_ebm.py  test_climate_model_ebm_v1.py  test_climate_model_ebm_v2.py  test_climate_model_scbc.py  test_climate_model_scbc_v0.py  test_env.py  utils.py
tests/multi_agent/: __init__.py  test_climate_model_ebm_v2.py  test_climate_model_ebm_v3.py
tests/runs/scbc-v0-optim-L-60k_2025-07-16_03-03/SimpleClimateBiasCorrection-v0__ddpg_torch__1__1752631437/: events.out.tfevents.1752631439.host1004.jc.rl.ac.uk.822788.0
tests/single_agent/: __init__.py  conftest.py  test_climate_model_ebm_v1.py  test_climate_model_rce17_v0.py  test_climate_model_rce_v0.py  test_climate_model_scbc_v0.py  test_climate_model_scbc_v1.py  test_climate_model_scbc_v1_f90.py  test_env.py  test_save.py  test_save_and_load.py
(+8 files in other folders)
