[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedrain"
version = "0.1.0"
description = "A simple API for climate RL integration."
authors = [
    { name = "Pritthijit Nath", email = "pn341@cam.ac.uk" }
]
dependencies = [
    "numpy==1.26.4",
    "pygame==2.6.1",
    "gymnasium==0.29.1",
    "torch==2.3.1+cu118",
    "matplotlib==3.9.4",
    "pandas==2.2.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fedrain*"]
