[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedrain"
version = "0.1.0"
description = "A simple API for climate RL integration."
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = { file = "LICENSE" }
authors = [ { name = "Pritthijit Nath", email = "pn341@cam.ac.uk" } ]
keywords = ["climate", "reinforcement-learning", "federated-learning"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["fedrain", "fedrain.*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
